# Obsidion

./: .coverage  .dockerignore  .flake8  .gitignore  BOTLIST.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  alembic.ini  botlist  config-default.yaml  crowdin.yml  docker-compose.yaml  mypi.ini  mypy.ini  noxfile.py  pyproject.tmp  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: feature_req.md  other_bugs.md
.github/workflows/: crowdin.yml  release.yml  tests.yml
migrations/versions/: 851d11b8a33e_create_guild_table.py
obsidion/: __init__.py  __main__.py  async_stats.py  bot.py  constants.py
obsidion/cogs/botlist/: __init__.py  botlist.py
obsidion/cogs/config/: __init__.py  config.py
obsidion/cogs/events/: events.py
obsidion/cogs/facts/: __init__.py  facts.py
obsidion/cogs/fun/: __init__.py  fun.py
obsidion/cogs/hypixel/: __init__.py  hypixel.py
obsidion/cogs/images/: __init__.py  images.py
obsidion/cogs/images/locales/: af-ZA.po  ar-SA.po  ca-ES.po  cs-CZ.po  da-DK.po  de-DE.po  el-GR.po  en-US.po  es-ES.po  fi-FI.po  fr-FR.po  he-IL.po  hu-HU.po  it-IT.po  ja-JP.po  ko-KR.po  messages.pot  nl-NL.po  no-NO.po  pl-PL.po  pt-BR.po  pt-PT.po  ro-RO.po  ru-RU.po  sr-SP.po  sv-SE.po  tr-TR.po  uk-UA.po  vi-VN.po  zh-CN.po  zh-TW.po
obsidion/cogs/info/: __init__.py  info.py
obsidion/cogs/info/locales/: af-ZA.po  ar-SA.po  ca-ES.po  cs-CZ.po  da-DK.po  de-DE.po  el-GR.po  en-US.po  es-ES.po  fi-FI.po  fr-FR.po  he-IL.po  hu-HU.po  it-IT.po  ja-JP.po  ko-KR.po  messages.pot  nl-NL.po  no-NO.po  pl-PL.po  pt-BR.po  pt-PT.po  ro-RO.po  ru-RU.po  sr-SP.po  sv-SE.po  tr-TR.po  uk-UA.po  vi-VN.po  zh-CN.po  zh-TW.po
obsidion/cogs/minecraft/: __init__.py  minecraft.py
obsidion/cogs/misc/: __init__.py  misc.py
obsidion/cogs/rcon/: __init__.py  rcon.py
obsidion/cogs/redstone/: __init__.py  redstone.py
obsidion/cogs/servers/: __init__.py  servers.py  utils.py
obsidion/core/: bot.py  config.py  core_commands.py  dev_commands.py  development.py  error_handler.py  events.py  global_checks.py  help.py  i18n.py  logging.py  minecraft_news.py  settings_cache.py
obsidion/core/locales/: af-ZA.po  ar-SA.po  ca-ES.po  cs-CZ.po  da-DK.po  de-DE.po  el-GR.po  en-US.po  en_US.po  es-ES.po  fi-FI.po  fr-FR.po  he-IL.po  hu-HU.po  it-IT.po  ja-JP.po  ko-KR.po  messages.pot  nl-NL.po  no-NO.po  pl-PL.po  pt-BR.po  pt-PT.po  ro-RO.po  ru-RU.po  sr-SP.po  sv-SE.po  tr-TR.po  uk-UA.po  vi-VN.po  zh-CN.po  zh-TW.po
obsidion/core/utils/: chat_formatting.py  predicates.py  utils.py
obsidion/core/utils/locales/: af-ZA.po  ar-SA.po  ca-ES.po  cs-CZ.po  da-DK.po  de-DE.po  el-GR.po  en-US.po  es-ES.po  fi-FI.po  fr-FR.po  he-IL.po  hu-HU.po  it-IT.po  ja-JP.po  ko-KR.po  nl-NL.po  no-NO.po  pl-PL.po  pt-BR.po  pt-PT.po  ro-RO.po  ru-RU.po  sr-SP.po  sv-SE.po  tr-TR.po  uk-UA.po  vi-VN.po  zh-CN.po  zh-TW.po
obsidion/locales/: messages.pot
obsidion/utils/: chat_formatting.py  utils.py
tests/: __init__.py  test_obsidion.py
