[tool.poetry]
authors = ["Darkflame72 <leon@bowie-co.nz>"]
description = "A Minecraft discord bot"
license = "AGPL-3.0-or-later"
name = "obsidion"
version = "1.0.0.dev1"

[tool.poetry.dependencies]
aiodns = "^2.0.0"
aiohttp = "^3.6.2"
aioredis = "^1.3.1"
asyncpg = "^0.21.0"
asyncrcon = "^1.1.4"
beautifulsoup4 = "^4.9.2"
"discord.py" = "^1.5.0"
feedparser = "^6.0.1"
fuzzywuzzy = {extras = ["speedup"], version = "^0.18.0"}
lxml = "^4.5.2"
mcsrvstats = "^0.1.1"
python = "^3.8"
pyyaml = "^5.3.1"
statsd = "^3.3.0"
uvloop = "^0.14.0"
asyncpixel = "^0.2.0"
dpymenus = "^1.2.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
codecov = "^2.1.9"
coverage = {extras = ["toml"], version = "^5.3"}
darglint = "^1.5.4"
fakeredis = "^1.4.3"
flake8 = "^3.8.3"
flake8-annotations = "^2.4.0"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
mypy = "^0.782"
nox = "^2020.8.22"
pytest = "^5.0"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
pytype = {version = "^2020.9.29", python = "3.8"}
safety = "^1.9.0"
typeguard = "^2.9.1"

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 88
target-version = ['py36', 'py37', 'py38']
[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["obsidion"]

[tool.coverage.report]
show_missing = true
#fail_under = 100

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=1.1"]
